# maestro

./: .gitignore  README.md  deploy.sh  deployments.testnet.env
.claude/: launch.json
apps/client/: .env.example  index.html  package-lock.json  package.json  vite.config.ts  wagmi.config.ts
apps/client/src/: routeTree.gen.ts
apps/client/src/app/: __root.tsx  claim-link.tsx  contacts.tsx  dashboard.tsx  history.tsx  index.tsx  join.tsx  proposals.tsx  settings.tsx  setup.tsx  wallet.tsx  welcome.tsx
apps/client/src/config/: chains.ts  index.ts  stellar.ts
apps/client/src/contracts/: generated.ts  stellar.ts
apps/client/src/hooks/: use-agent-connection.ts  use-allowance-drip.ts  use-allowance.ts  use-auto-collect.ts  use-auto-scoop.ts  use-circle-crypto.ts  use-circles.ts  use-collectable-scanner.ts  use-count-up.ts  use-family-board.ts  use-family.ts  use-logout.ts  use-now.ts  use-pending.ts  use-privacy-engine.ts  use-proposals.ts  use-rewards.ts  use-stream-actions.ts  use-stream-collect.ts  use-stream-create.ts  use-stream-reads.ts  use-sweep.ts  use-token-decimals.ts  use-treasury-history.ts  use-wallet-discovery.ts  use-yield-actions.ts  use-yield-positions.ts  use-yieldbox.ts
apps/client/tests/: QUICK-START.md  README.md  TIMING-FIX.md  board-roundtrip.ts  board-sync-e2e.ts  debug-temp.ts  e2e-account-setup.ts  e2e-allowance-multi-stellar.ts  e2e-allowance-stellar.ts  e2e-claim-stellar.ts  e2e-collect.ts  e2e-privacy.ts  e2e-streaming.ts  e2e-two-wallet-stellar.ts  e2e-wdk-4337.ts
apps/contracts/: Cargo.toml
apps/contracts/.cargo/: config.toml
apps/contracts/circuits/: remint.circom
apps/contracts/drips/: Cargo.toml
apps/contracts/drips/src/: splits.rs
apps/contracts/drips/test_snapshots/streams/test/: stream_then_receive_over_cycles.1.json
apps/contracts/groth16_verifier/: Cargo.toml  build.rs
apps/contracts/groth16_verifier/src/: test.rs
apps/contracts/yield_manager/test_snapshots/test/: invest_earn_yield_and_reclaim_principal.1.json
apps/contracts/zwerc20/src/: nullifier.rs
apps/contracts/zwerc20/test_snapshots/merkle/test/: leaves_are_stored_and_readable.1.json
apps/contracts/zwerc20/test_snapshots/nullifier/test/: consume_then_used.1.json
apps/contracts/zwerc20/test_snapshots/test_remint/: remint_e2e_pays_recipient_and_blocks_replay.1.json
apps/contracts/zwerc20/test_snapshots/test_storage/: remint_publishes_claim_event.1.json
apps/server/: .env.example  package-lock.json  package.json  tsconfig.json  vitest.integration.config.ts
apps/server/api/: [...path].ts  health.ts
apps/server/src/: index.ts  server.ts  serverless.ts
contracts/.cargo/: config.toml
contracts/drips/src/: lib.rs  streams.rs
contracts/yield_manager/: Cargo.toml
contracts/yield_manager/src/: lib.rs
contracts/zwerc20/: Cargo.toml
contracts/zwerc20/src/: lib.rs  merkle.rs  poseidon.rs  poseidon_t3.rs  remint_fixture.rs  test_remint.rs  test_storage.rs
contracts/zwerc20/test_snapshots/merkle/test/: init_then_insert_updates_and_tracks_roots.1.json
contracts/zwerc20/test_snapshots/nullifier/test/: double_consume_panics.1.json
contracts/zwerc20/test_snapshots/test_remint/: remint_e2e_pays_recipient_and_blocks_replay.1.json
contracts/zwerc20/test_snapshots/test_storage/: leaf_out_of_range_panics.1.json  leaf_storage_and_range_reads.1.json
scripts/: deploy_testnet.sh
(+125 files in other folders)
